src/test/ui/parser/extern-expected-fn-or-brace.stderr
error: expected one of `fn` or `{`, found `mod`
  --> $DIR/extern-expected-fn-or-brace.rs:6:12
   |
LL | extern "C" mod foo; //~ERROR expected one of `fn` or `{`, found `mod`
   |            ^^^ expected one of `fn` or `{` here

error: aborting due to previous error

